# flutter_gen

./: Cargo.toml  README.md
src/features/: mod.rs
src/features/bloc_gen/: mod.rs
src/features/bloc_gen/data/: bloc_base_text.rs  mod.rs
src/features/bloc_gen/src/: bloc_file_gen.rs  mod.rs
src/lib/: mod.rs
src/lib/error/: mod.rs
src/lib/file_helper/: write_to_file.rs
src/lib/utils/: mod.rs
