# workspace = { members = ["flutter_gen"] }
[package]
name = "flutter_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }

tokio = { version = "1", features = ["full"] }

